k8s-deployment/java-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app 
    spec:
      imagePullSecrets:
      - name: armin-hub-reg
      containers:
      - name: java-mysql-app
        image: amalkoc/k8s-exercises:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1 
kind: Service 
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app 
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
