k8s-deployment/phpmyadmin-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
     app: phpmyadmin 
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin:5
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1 
kind: Service 
metadata:
  name: phpmyadmin-service 
spec:
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
