k8s-deployment/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
spec:
  rules:
  - host: my-java-app.com
    http:
      paths:
        - path: /
          pathType: prefix 
          backend: 
            service:
              name: java-app-service
              port:
                number: 8080
  ingressClassName: nginx
